--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -19,9 +19,9 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np \n",
-    "from scipy import stats as st\n",
-    "import plotly_express as px\n",
-    "import streamlit as st"
+    "import streamlit as st\n",
+    "import plotly.express as px\n",
+    "from scipy import stats as st"
    ]
   },
   {
@@ -109,11 +109,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       price  model_year         model  condition  cylinders fuel  odometer  \\\n",
-      "19506   1100         NaN  honda accord  excellent        6.0  gas  332081.0   \n",
+      "       price  model_year       model condition  cylinders fuel  odometer  \\\n",
+      "20275  10000      2008.0  ford f-150      good        8.0  gas   87000.0   \n",
       "\n",
       "      transmission   type paint_color  is_4wd date_posted  days_listed  \n",
-      "19506    automatic  sedan         red     NaN  2018-08-10           33  \n"
+      "20275    automatic  truck       white     1.0  2018-11-30           28  \n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -41305,7 +41305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -82419,7 +82419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -164092,7 +164092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -245761,6 +245761,28 @@
    "source": [
     "year_vs_price = px.scatter(data, x='model_year', y='price', title='Year vs Price', opacity=0.5)\n",
     "year_vs_price.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "<h2> Student's comment</h2>\n",
+    "\n",
+    "We added plots of various aspects, such as year vs price, price vs odometer, and frequency histograms of both price and odometer readings. Next we will create our app by adding an app.py file where we will place our app code. This will allow us to interact with our visualizations. \n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "<h2> Conclusion</h2>\n",
+    "\n",
+    "After conducting exploratory data analysis, we find that vehicles most commonly sell for between 5000 to 10000 dollars. In general people seem to sell cars more at a lower price and as prices get higher, fewer cars are being sold in those ranges. 120k to 130k is the most frequent reading we see in Odometer readings. 90k to 130k odometer readings are where car sales peak, with odometer readings of more or less have less sales. Our scatter plot for price vs. odometer shows a negative correlation between price and odometer reading. As the odometer reading increases, the price tends to decrease. In our year vs price scatterplot, we find a positive correlation between year and price. Newer cars tend to sell for more. \n",
+    "</div>"
    ]
   }
  ],
